// Vitest Snapshot v1

exports[`<SectionBackground /> > should render SectionBackground with background false 1`] = `
.c0 {
  background: #FFFFFF;
  color: #07090D;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Texto
    </div>
  </div>
</div>
`;

exports[`<SectionBackground /> > should render SectionBackground with background true 1`] = `
.c0 {
  background: #FFFFFF;
  color: #07090D;
  background: #07090D;
  color: #FFFFFF;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Texto
    </div>
  </div>
</div>
`;
